src/test/deca/syntax/valid/bool_ops.deca

// Description :
// Opérateurs booléens && ||
//
// Resultats :
// ok
//

{
    b = true && false || true ;
    c != false ;
    println(b,c);
}