src/test/deca/syntax/invalid/virgule_finale.deca

//Erreur : virgule finale non autorisée

{
    println("comma ?",);
}